overlays/test/deploy-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: epsilon
spec:
  template:
    spec:
      containers:
        - name: epsilon
          image: ghcr.io/vehagn/epsilon:main
          env:
            - name: NUXT_BACKEND_URL
              value: http://backend:8080
