overlays/test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deltahouse
spec:
  template:
    spec:
      containers:
        - name: epsilon
          image: ghcr.io/vehagn/epsilon:main
          env:
            - name: NUXT_BACKEND_URL
              value: http://localhost:8080
        - name: deltahouse
          image: ghcr.io/vehagn/deltahouse
          env:
            - name: JAVA_TOOL_OPTIONS
              value: '-Dspring.profiles.active=test-stonegarden'
            - name: datasource-url
              value: jdbc:postgresql://delta-test-db:5432/delta
            - name: datasource-username
              valueFrom:
                secretKeyRef:
                  name: delta.delta-test-db.credentials.postgresql.acid.zalan.do
                  key: username
            - name: datasource-password
              valueFrom:
                secretKeyRef:
                  name: delta.delta-test-db.credentials.postgresql.acid.zalan.do
                  key: password
