overlays/test/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: deltahouse
spec:
  routes:
    - match: Host(`delta-test.stonegarden.dev`)
      kind: Rule
      services:
        - name: frontend
          port: 3000
    - match: Host(`delta-test-backend.stonegarden.dev`)
      kind: Rule
      services:
        - name: backend
          port: 8080
